dev: home/landing page

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -1,30 +1,81 @@
 {
-  "heroTitle": "تقدم للحصول على المساعدة المالية",
-  "heroSubtitle": "عملية تطبيق بسيطة من 3 خطوات",
-  "heroDescription": "احصل على الدعم المالي الذي تحتاجه من خلال بوابتنا الإلكترونية الآمنة والسرية. عمليتنا المبسطة تجعل من السهل التقدم للحصول على المساعدة الحكومية.",
-  "startApplication": "ابدأ التطبيق",
+  "heroTitle": "طلب الرعاية الاجتماعية",
+  "heroSubtitle": "التقدم للحصول على المساعدة المالية",
+  "heroDescription": "برنامج الدعم الاجتماعي والتمكين هو مبادرة اتحادية تقدم مساعدة مالية شهرية للأسر ذات الدخل المحدود، بهدف تعزيز استقرارها الاقتصادي وتمكينها.",
+  "startApplication": "ابدأ الخدمة",
   "learnMore": "اعرف المزيد",
+  "serviceFee": "رسوم الخدمة: مجاناً",
+  "serviceTime": "مدة تقديم الطلب: 10 دقائق",
+  "serviceSLA": "مستوى الخدمة: 21 يوم عمل",
+  
   "trustBadgesSecure": "آمن وسري",
   "trustBadgesOfficial": "بوابة حكومية رسمية",
   "trustBadgesFree": "خدمة مجانية",
   "trustBadgesSupport": "دعم متاح 24/7",
-  "whatYouNeed": "ما ستحتاجه",
-  "requirementId": "هوية صادرة عن الحكومة صالحة",
-  "requirementIncome": "إثبات الدخل أو البطالة",
-  "requirementBank": "معلومات الحساب المصرفي",
-  "requirementHousehold": "معلومات الأسرة",
-  "whyApplyTitle": "لماذا تتقدم عبر الإنترنت؟",
-  "benefitQuick": "تطبيق سريع 15 دقيقة",
+  
+  "programTitle": "نظرة عامة على البرنامج",
+  "programDescription": "يركز هذا البرنامج على حماية أكثر فئات المجتمع ضعفاً، ويقدم نظام دعم شامل. يوفر بدلات شهرية أساسية مصممة حسب احتياجات أنواع الأسر المختلفة، إلى جانب بدلات تكميلية للأسر التي تتلقى هذا الدعم بالفعل.",
+  
+  "benefitsTitle": "فوائد البرنامج",
+  "benefitMonthly": "مساعدة مالية شهرية",
+  "benefitMonthlyDesc": "بدلات شهرية منتظمة بناءً على حجم الأسرة واحتياجاتها",
+  "benefitHousing": "بدل السكن",
+  "benefitHousingDesc": "دعم إضافي للأسر التي لا تحصل على مساعدة سكنية حكومية",
+  "benefitAcademic": "بدل التفوق الأكاديمي",
+  "benefitAcademicDesc": "دعم للأداء الأكاديمي المتميز",
+  "benefitComplementary": "البدلات التكميلية",
+  "benefitComplementaryDesc": "دعم إضافي للمستفيدين الحاليين",
+  
+  "eligibilityTitle": "معايير الاستحقاق",
+  "eligibilityIncome": "متطلبات الدخل المحدود",
+  "eligibilityResidency": "حالة الإقامة في دولة الإمارات",
+  "eligibilityCitizenship": "الجنسية الإماراتية",
+  "eligibilityDocuments": "الوثائق المطلوبة",
+  
+  "whatYouNeed": "الوثائق المطلوبة",
+  "requirementId": "بطاقة الهوية الإماراتية سارية المفعول",
+  "requirementIncome": "شهادة راتب أو إثبات دخل",
+  "requirementBank": "كشف حساب مصرفي",
+  "requirementHousehold": "خلاصة القيد (دفتر العائلة)",
+  "requirementUtilities": "فواتير الخدمات",
+  "requirementRental": "عقد الإيجار (إن وجد)",
+  
+  "howItWorksTitle": "كيف يعمل النظام",
+  "step1Title": "المعلومات الشخصية",
+  "step1Desc": "قدم تفاصيلك الشخصية ومعلومات الهوية",
+  "step2Title": "تفاصيل الأسرة والمالية",
+  "step2Desc": "شارك تكوين أسرتك ووضعك المالي",
+  "step3Title": "الوثائق المؤيدة",
+  "step3Desc": "ارفق الوثائق المطلوبة واوصف وضعك",
+  
+  "whyApplyTitle": "لماذا التقديم عبر الإنترنت؟",
+  "benefitQuick": "تطبيق سريع خلال 10 دقائق",
   "benefitSecure": "آمن ومشفر",
   "benefitConfirmation": "تأكيد فوري",
   "benefitTracking": "تتبع حالة طلبك",
+  
   "needHelpTitle": "تحتاج مساعدة؟",
-  "contactPhone": "اتصل: 1-800-XXX-XXXX",
-  "contactEmail": "البريد الإلكتروني: support@gov.portal",
+  "contactPhone": "اتصل: 800-دعم",
+  "contactEmail": "البريد الإلكتروني: support@socialwelfare.gov.ae",
   "contactHours": "متاح 24/7",
-  "readyToStart": "هل أنت مستعد للبدء؟",
-  "applicationTime": "يستغرق التطبيق حوالي 15 دقيقة فقط للإكمال",
-  "copyright": "© 2025 البوابة الحكومية. جميع الحقوق محفوظة.",
-  "govPortal": "بوابة الدعم الحكومي",
-  "switchToEnglish": "English"
+  "contactCenter": "زيارة مركز خدمة العملاء",
+  
+  "readyToStart": "هل أنت مستعد للتقديم؟",
+  "applicationTime": "تستغرق عملية التقديم حوالي 10 دقائق لإكمالها",
+  "getStarted": "ابدأ الآن",
+  
+  "footer": "© 2025 وزارة تنمية المجتمع. جميع الحقوق محفوظة.",
+  "govPortal": "بوابة الرعاية الاجتماعية",
+  "switchToArabic": "العربية",
+  "switchToEnglish": "English",
+  
+  "breadcrumbHome": "الرئيسية",
+  "breadcrumbServices": "خدماتنا",
+  "breadcrumbWelfare": "طلب الرعاية الاجتماعية",
+  
+  "navigationHome": "الرئيسية",
+  "navigationServices": "الخدمات",
+  "navigationAbout": "حول",
+  "navigationContact": "اتصل بنا",
+  "navigationLanguages": "اللغات"
 } 
