--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,30 +1,81 @@
 {
-  "heroTitle": "Apply for Financial Assistance",
-  "heroSubtitle": "Simple 3-step application process",
-  "heroDescription": "Get the financial support you need through our secure, confidential online portal. Our streamlined process makes it easy to apply for government assistance.",
-  "startApplication": "Start Application",
+  "heroTitle": "Social Welfare Application",
+  "heroSubtitle": "Apply for Financial Assistance",
+  "heroDescription": "The Social Support and Empowerment Program is a federal initiative that offers monthly financial assistance to families with limited income, aiming to strengthen their economic stability and empowerment.",
+  "startApplication": "Start The Service",
   "learnMore": "Learn More",
+  "serviceFee": "Service Fee: Free of charge",
+  "serviceTime": "Service Apply Time: 10 Minutes",
+  "serviceSLA": "SLA: 21 working days",
+  
   "trustBadgesSecure": "Secure & Confidential",
   "trustBadgesOfficial": "Official Government Portal",
   "trustBadgesFree": "Free Service",
   "trustBadgesSupport": "24/7 Support Available",
-  "whatYouNeed": "What You'll Need",
-  "requirementId": "Valid government-issued ID",
-  "requirementIncome": "Proof of income or unemployment",
-  "requirementBank": "Bank account information",
-  "requirementHousehold": "Household information",
+  
+  "programTitle": "Program Overview",
+  "programDescription": "This program focuses on protecting the most vulnerable groups of the community, offering a comprehensive support system. It provides basic monthly allowances tailored to the needs of different family types, along with complementary allowances for families already receiving this support.",
+  
+  "benefitsTitle": "Program Benefits",
+  "benefitMonthly": "Monthly Financial Assistance",
+  "benefitMonthlyDesc": "Regular monthly allowances based on family size and needs",
+  "benefitHousing": "Housing Allowance",
+  "benefitHousingDesc": "Additional support for families without government housing assistance",
+  "benefitAcademic": "Academic Excellence Allowance",
+  "benefitAcademicDesc": "Support for outstanding academic performance",
+  "benefitComplementary": "Complementary Allowances",
+  "benefitComplementaryDesc": "Additional support for existing beneficiaries",
+  
+  "eligibilityTitle": "Eligibility Criteria",
+  "eligibilityIncome": "Limited Income Requirements",
+  "eligibilityResidency": "UAE Residency Status",
+  "eligibilityCitizenship": "Emirati Citizenship",
+  "eligibilityDocuments": "Required Documentation",
+  
+  "whatYouNeed": "Required Documents",
+  "requirementId": "Valid Emirates ID",
+  "requirementIncome": "Salary Certificate or Income Proof",
+  "requirementBank": "Bank Account Statement",
+  "requirementHousehold": "Family Book (Khulasat Al Qaid)",
+  "requirementUtilities": "Utility Bills",
+  "requirementRental": "Rental Contract (if applicable)",
+  
+  "howItWorksTitle": "How It Works",
+  "step1Title": "Personal Information",
+  "step1Desc": "Provide your personal details and identification information",
+  "step2Title": "Family & Financial Details",
+  "step2Desc": "Share your household composition and financial situation",
+  "step3Title": "Supporting Documents",
+  "step3Desc": "Upload required documents and describe your situation",
+  
   "whyApplyTitle": "Why Apply Online?",
-  "benefitQuick": "Quick 15-minute application",
+  "benefitQuick": "Quick 10-minute application",
   "benefitSecure": "Secure and encrypted",
   "benefitConfirmation": "Instant confirmation",
   "benefitTracking": "Track your application status",
+  
   "needHelpTitle": "Need Help?",
-  "contactPhone": "Call: 1-800-XXX-XXXX",
-  "contactEmail": "Email: support@gov.portal",
+  "contactPhone": "Call: 800-SUPPORT",
+  "contactEmail": "Email: support@socialwelfare.gov.ae",
   "contactHours": "Available 24/7",
-  "readyToStart": "Ready to Get Started?",
-  "applicationTime": "The application takes about 15 minutes to complete",
-  "copyright": "© 2025 Government Portal. All rights reserved.",
-  "govPortal": "Government Support Portal",
-  "switchToArabic": "العربية"
+  "contactCenter": "Visit Customer Service Center",
+  
+  "readyToStart": "Ready to Apply?",
+  "applicationTime": "The application process takes approximately 10 minutes to complete",
+  "getStarted": "Get Started Now",
+  
+  "footer": "© 2025 Ministry of Community Empowerment. All rights reserved.",
+  "govPortal": "Social Welfare Portal",
+  "switchToArabic": "العربية",
+  "switchToEnglish": "English",
+  
+  "breadcrumbHome": "Home",
+  "breadcrumbServices": "Our Services",
+  "breadcrumbWelfare": "Social Welfare Application",
+  
+  "navigationHome": "Home",
+  "navigationServices": "Services",
+  "navigationAbout": "About",
+  "navigationContact": "Contact Us",
+  "navigationLanguages": "Languages"
 } 
