feat: initiate service through stepper

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -77,5 +77,120 @@
   "navigationServices": "الخدمات",
   "navigationAbout": "حول",
   "navigationContact": "اتصل بنا",
-  "navigationLanguages": "اللغات"
+  "navigationLanguages": "اللغات",
+
+  "applicationTitle": "طلب الرعاية الاجتماعية",
+  "applicationSubtitle": "أكمل طلبك في 4 خطوات بسيطة",
+  
+  "stepPersonalInfo": "المعلومات الشخصية",
+  "stepPersonalInfoDesc": "قدم تفاصيلك الشخصية الأساسية",
+  "stepFamilyFinancial": "معلومات الأسرة والمالية",
+  "stepFamilyFinancialDesc": "شارك معلومات أسرتك ووضعك المالي",
+  "stepSituationDescription": "وصف الوضع",
+  "stepSituationDescriptionDesc": "اوصف ظروفك الحالية",
+  "stepReview": "المراجعة والإرسال",
+  "stepReviewDesc": "راجع معلوماتك قبل الإرسال",
+  
+  "fullName": "الاسم الكامل",
+  "enterFullName": "أدخل اسمك الكامل",
+  "nationalId": "رقم الهوية الوطنية",
+  "enterNationalId": "أدخل رقم هويتك الوطنية",
+  "dateOfBirth": "تاريخ الميلاد",
+  "selectDateOfBirth": "اختر تاريخ ميلادك",
+  "gender": "الجنس",
+  "selectGender": "اختر جنسك",
+  "male": "ذكر",
+  "female": "أنثى",
+  "address": "العنوان",
+  "enterAddress": "أدخل عنوانك الكامل",
+  "city": "المدينة",
+  "enterCity": "أدخل مدينتك",
+  "state": "الولاية/الإمارة",
+  "enterState": "أدخل ولايتك أو إمارتك",
+  "country": "البلد",
+  "selectCountry": "اختر بلدك",
+  "phone": "رقم الهاتف",
+  "enterPhone": "أدخل رقم هاتفك",
+  "email": "عنوان البريد الإلكتروني",
+  "enterEmail": "أدخل عنوان بريدك الإلكتروني",
+  
+  "uae": "دولة الإمارات العربية المتحدة",
+  "saudiArabia": "المملكة العربية السعودية",
+  "kuwait": "الكويت",
+  "qatar": "قطر",
+  "bahrain": "البحرين",
+  "oman": "عُمان",
+  
+  "maritalStatus": "الحالة الاجتماعية",
+  "selectMaritalStatus": "اختر حالتك الاجتماعية",
+  "single": "أعزب",
+  "married": "متزوج",
+  "divorced": "مطلق",
+  "widowed": "أرمل",
+  "dependents": "عدد المعالين",
+  "enterDependents": "أدخل عدد المعالين",
+  "employmentStatus": "حالة التوظيف",
+  "selectEmploymentStatus": "اختر حالة التوظيف",
+  "employed": "موظف",
+  "unemployed": "غير موظف",
+  "selfEmployed": "يعمل لحسابه الخاص",
+  "retired": "متقاعد",
+  "student": "طالب",
+  "disabled": "معاق",
+  "monthlyIncome": "الدخل الشهري (درهم)",
+  "enterMonthlyIncome": "أدخل دخلك الشهري",
+  "housingStatus": "حالة السكن",
+  "selectHousingStatus": "اختر حالة سكنك",
+  "owned": "مملوك",
+  "rented": "مستأجر",
+  "govHousing": "سكن حكومي",
+  "familyHousing": "سكن العائلة",
+  "temporaryHousing": "سكن مؤقت",
+  
+  "currentFinancialSituation": "الوضع المالي الحالي",
+  "describeFinancialSituation": "صف وضعك المالي الحالي بالتفصيل...",
+  "employmentCircumstances": "ظروف التوظيف",
+  "describeEmploymentCircumstances": "صف ظروف عملك...",
+  "reasonForApplying": "سبب التقديم",
+  "describeReasonForApplying": "اشرح سبب تقديمك لطلب المساعدة الاجتماعية...",
+  
+  "helpfulTips": "نصائح مفيدة",
+  "tip1": "كن محددًا وصادقًا حول وضعك المالي",
+  "tip2": "اذكر أي تغييرات حديثة في العمل أو الدخل",
+  "tip3": "اذكر أي مصاريف طبية أو ظروف خاصة",
+  "tip4": "اوصف كيف ستساعدك هذه المساعدة في تحسين وضعك",
+  
+  "minCharacters": "الحد الأدنى {{count}} حرف مطلوب",
+  "minDescriptionLength": "يجب أن يكون الوصف 20 حرفًا على الأقل",
+  "maxDescriptionLength": "يجب ألا يتجاوز الوصف 1000 حرف",
+  
+  "fieldRequired": "هذا الحقل مطلوب",
+  "invalidEmail": "يرجى إدخال عنوان بريد إلكتروني صالح",
+  "invalidPhone": "يرجى إدخال رقم هاتف صالح",
+  "invalidNationalId": "يجب أن يكون رقم الهوية بين 8-15 حرفًا",
+  "nameMinLength": "يجب أن يكون الاسم حرفين على الأقل",
+  "invalidNumber": "يرجى إدخال رقم صالح",
+  "invalidAmount": "يرجى إدخال مبلغ صالح",
+  
+  "continue": "متابعة",
+  "back": "رجوع",
+  "edit": "تحرير",
+  "cancel": "إلغاء",
+  "submitApplication": "إرسال الطلب",
+  "yesSubmit": "نعم، أرسل",
+  
+  "reviewNotice": "راجع معلوماتك",
+  "reviewNoticeDesc": "يرجى مراجعة جميع المعلومات التي قدمتها قبل إرسال طلبك.",
+  "submissionNotice": "إشعار مهم",
+  "submissionNoticeDesc": "بإرسال هذا الطلب، تؤكد أن جميع المعلومات المقدمة دقيقة وكاملة.",
+  
+  "confirmSubmission": "تأكيد الإرسال",
+  "confirmSubmissionDesc": "هل أنت متأكد من أنك تريد إرسال طلبك؟ بمجرد الإرسال، لن تتمكن من إجراء تغييرات.",
+  "readyToSubmit": "جاهز لإرسال طلبك",
+  
+  "applicationSubmitted": "تم إرسال الطلب بنجاح",
+  "applicationSubmittedDesc": "تم إرسال طلب الرعاية الاجتماعية الخاص بك. ستتلقى رسالة تأكيد بالبريد الإلكتروني قريبًا مع رقم مرجع طلبك.",
+  "submissionError": "فشل في الإرسال. يرجى المحاولة مرة أخرى.",
+  "returnHome": "العودة للرئيسية",
+  "notProvided": "غير مقدم"
 } 
