--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -77,5 +77,120 @@
   "navigationServices": "Services",
   "navigationAbout": "About",
   "navigationContact": "Contact Us",
-  "navigationLanguages": "Languages"
+  "navigationLanguages": "Languages",
+
+  "applicationTitle": "Social Welfare Application",
+  "applicationSubtitle": "Complete your application in 4 simple steps",
+  
+  "stepPersonalInfo": "Personal Information",
+  "stepPersonalInfoDesc": "Provide your basic personal details",
+  "stepFamilyFinancial": "Family & Financial",
+  "stepFamilyFinancialDesc": "Share your household and financial information",
+  "stepSituationDescription": "Situation Description",
+  "stepSituationDescriptionDesc": "Describe your current circumstances",
+  "stepReview": "Review & Submit",
+  "stepReviewDesc": "Review your information before submission",
+  
+  "fullName": "Full Name",
+  "enterFullName": "Enter your full name",
+  "nationalId": "National ID",
+  "enterNationalId": "Enter your National ID",
+  "dateOfBirth": "Date of Birth",
+  "selectDateOfBirth": "Select your date of birth",
+  "gender": "Gender",
+  "selectGender": "Select your gender",
+  "male": "Male",
+  "female": "Female",
+  "address": "Address",
+  "enterAddress": "Enter your full address",
+  "city": "City",
+  "enterCity": "Enter your city",
+  "state": "State/Emirate",
+  "enterState": "Enter your state or emirate",
+  "country": "Country",
+  "selectCountry": "Select your country",
+  "phone": "Phone Number",
+  "enterPhone": "Enter your phone number",
+  "email": "Email Address",
+  "enterEmail": "Enter your email address",
+  
+  "uae": "United Arab Emirates",
+  "saudiArabia": "Saudi Arabia",
+  "kuwait": "Kuwait",
+  "qatar": "Qatar",
+  "bahrain": "Bahrain",
+  "oman": "Oman",
+  
+  "maritalStatus": "Marital Status",
+  "selectMaritalStatus": "Select your marital status",
+  "single": "Single",
+  "married": "Married",
+  "divorced": "Divorced",
+  "widowed": "Widowed",
+  "dependents": "Number of Dependents",
+  "enterDependents": "Enter number of dependents",
+  "employmentStatus": "Employment Status",
+  "selectEmploymentStatus": "Select your employment status",
+  "employed": "Employed",
+  "unemployed": "Unemployed",
+  "selfEmployed": "Self-employed",
+  "retired": "Retired",
+  "student": "Student",
+  "disabled": "Disabled",
+  "monthlyIncome": "Monthly Income (AED)",
+  "enterMonthlyIncome": "Enter your monthly income",
+  "housingStatus": "Housing Status",
+  "selectHousingStatus": "Select your housing status",
+  "owned": "Owned",
+  "rented": "Rented",
+  "govHousing": "Government Housing",
+  "familyHousing": "Family Housing",
+  "temporaryHousing": "Temporary Housing",
+  
+  "currentFinancialSituation": "Current Financial Situation",
+  "describeFinancialSituation": "Describe your current financial situation in detail...",
+  "employmentCircumstances": "Employment Circumstances",
+  "describeEmploymentCircumstances": "Describe your employment circumstances...",
+  "reasonForApplying": "Reason for Applying",
+  "describeReasonForApplying": "Explain why you are applying for social welfare assistance...",
+  
+  "helpfulTips": "Helpful Tips",
+  "tip1": "Be specific and honest about your financial situation",
+  "tip2": "Include any recent changes in employment or income",
+  "tip3": "Mention any medical expenses or special circumstances",
+  "tip4": "Describe how this assistance will help improve your situation",
+  
+  "minCharacters": "Minimum {{count}} characters required",
+  "minDescriptionLength": "Description must be at least 20 characters long",
+  "maxDescriptionLength": "Description must not exceed 1000 characters",
+  
+  "fieldRequired": "This field is required",
+  "invalidEmail": "Please enter a valid email address",
+  "invalidPhone": "Please enter a valid phone number",
+  "invalidNationalId": "National ID must be between 8-15 characters",
+  "nameMinLength": "Name must be at least 2 characters long",
+  "invalidNumber": "Please enter a valid number",
+  "invalidAmount": "Please enter a valid amount",
+  
+  "continue": "Continue",
+  "back": "Back",
+  "edit": "Edit",
+  "cancel": "Cancel",
+  "submitApplication": "Submit Application",
+  "yesSubmit": "Yes, Submit",
+  
+  "reviewNotice": "Review Your Information",
+  "reviewNoticeDesc": "Please review all the information you've provided before submitting your application.",
+  "submissionNotice": "Important Notice",
+  "submissionNoticeDesc": "By submitting this application, you confirm that all information provided is accurate and complete.",
+  
+  "confirmSubmission": "Confirm Submission",
+  "confirmSubmissionDesc": "Are you sure you want to submit your application? Once submitted, you won't be able to make changes.",
+  "readyToSubmit": "Ready to submit your application",
+  
+  "applicationSubmitted": "Application Submitted Successfully",
+  "applicationSubmittedDesc": "Your social welfare application has been submitted. You will receive a confirmation email shortly with your application reference number.",
+  "submissionError": "Submission failed. Please try again.",
+  "returnHome": "Return to Home",
+  "notProvided": "Not Provided"
 } 
