fix: govt logo on navbar

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -115,6 +115,8 @@
   "enterEmail": "أدخل عنوان بريدك الإلكتروني",
 
   "uae": "دولة الإمارات العربية المتحدة",
+  "uaeGovernmentLogo": "شعار دولة الإمارات العربية المتحدة",
+  "goToHomePage": "الذهاب إلى الصفحة الرئيسية",
   "saudiArabia": "المملكة العربية السعودية",
   "kuwait": "الكويت",
   "qatar": "قطر",
