--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -115,6 +115,8 @@
   "enterEmail": "Enter your email address",
 
   "uae": "United Arab Emirates",
+  "uaeGovernmentLogo": "United Arab Emirates Government Logo",
+  "goToHomePage": "Go to Home Page",
   "saudiArabia": "Saudi Arabia",
   "kuwait": "Kuwait",
   "qatar": "Qatar",
